--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^2.6.5",
-    "vue": "^2.6.6",
-    "vue-router": "^3.0.3"
+    "core-js": "^2.6.11",
+    "vue": "^2.6.12",
+    "vue-router": "^3.4.5"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.5.0",
-    "@vue/cli-plugin-eslint": "^3.5.0",
-    "@vue/cli-service": "^3.5.0",
-    "babel-eslint": "^10.0.1",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
+    "babel-eslint": "^10.1.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^7.1.0",
-    "tar": ">=4.4.2",
-    "vue-loader": "^15.7.0",
+    "tar": "^6.0.5",
+    "vue-loader": "^15.9.3",
     "vue-markdown-loader": "^2.4.1",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.29.6"
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^4.44.2"
   },
   "eslintConfig": {
     "root": true,
