--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.12",
     "vue": "^2.6.12",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
